--- a/shop.html
+++ b/shop.html
@@ -1,9 +1,10 @@
+
 <!DOCTYPE html>
 <html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shop – Oculandia VR</title>
+    <title>Shop — Oculandia VR</title>
     <link rel="icon" href="icons/icon-512.png" type="image/png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -25,6 +26,24 @@
         .orbitron {
             font-family: 'Orbitron', monospace;
         }
+
+        /* Stile navigazione bottom */
+        .nav-bottom {
+            background: rgba(27, 38, 59, 0.95);
+            backdrop-filter: blur(20px);
+            border-top: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        .nav-item {
+            transition: all 0.3s ease;
+        }
+
+            .nav-item.active,
+            .nav-item:hover {
+                color: var(--accent-green);
+                transform: translateY(-2px);
+            }
+
         /* iframe full-viewport sotto header */
         #hoplix-iframe {
             width: 100%;
@@ -54,6 +73,7 @@
 
     <!-- IFRAME FULL-SCREEN al tuo negozio -->
     <iframe id="hoplix-iframe" src="https://oculandia-stuff.hoplix.shop/#page-1"></iframe>
+
     <!-- Bottom Navigation -->
     <nav class="nav-bottom fixed bottom-0 left-0 right-0 z-30">
         <div class="flex items-center justify-around py-3">
@@ -63,13 +83,13 @@
                 </svg>
                 <span class="text-xs">Home</span>
             </a>
-            <a href="events.html" class="nav-item flex-1 flex flex-col items-center justify-center gap-1 min-h-[56px] select-none ">
+            <a href="events.html" class="nav-item flex-1 flex flex-col items-center justify-center gap-1 min-h-[56px] select-none">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
                 </svg>
                 <span class="text-xs">Eventi</span>
             </a>
-            <a href="deals.html" class="nav-item flex-1 flex flex-col items-center justify-center gap-1 min-h-[56px] select-none ">
+            <a href="deals.html" class="nav-item flex-1 flex flex-col items-center justify-center gap-1 min-h-[56px] select-none">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 7h.01M7 3h5c.512 0 1.024.195 1.414.586l7 7a2 2 0 010 2.828l-7 7a2 2 0 01-2.828 0l-7-7A1.994 1.994 0 013 12V7a4 4 0 014-4z"></path>
                 </svg>
@@ -81,16 +101,16 @@
                 </svg>
                 <span class="text-xs">Shop</span>
             </a>
-            <a href="social.html" class="nav-item flex-1 flex flex-col items-center justify-center gap-1 min-h-[56px] select-none ">
+            <a href="social.html" class="nav-item flex-1 flex flex-col items-center justify-center gap-1 min-h-[56px] select-none">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8h2a2 2 0 012 2v6a2 2 0 01-2 2h-2v4l-4-4H9a1.994 1.994 0 01-1.414-.586m0 0L11 14h4a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2v4l.586-.586z"></path>
                 </svg>
-                <span class="text-xs">
-                    Social
-                </span>
+                <span class="text-xs">Social</span>
             </a>
-            <a href="minecraft.html" class="nav-item flex-1 flex flex-col items-center justify-center gap-1 min-h-[56px] select-none ">
-                <svg class="w-6 h-6 block" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 2l7 4v8l-7 4-7-4V6l7-4zm0 0v8m0 0l7-4m-7 4l-7-4" /></svg>
+            <a href="minecraft.html" class="nav-item flex-1 flex flex-col items-center justify-center gap-1 min-h-[56px] select-none">
+                <svg class="w-6 h-6 block" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 2l7 4v8l-7 4-7-4V6l7-4zm0 0v8m0 0l7-4m-7 4l-7-4" />
+                </svg>
                 <span class="text-[11px] leading-none whitespace-nowrap">Minecraft</span>
             </a>
         </div>
