--- a/minecraft.html
+++ b/minecraft.html
@@ -67,12 +67,11 @@
 
         .nav-item {
             transition: all 0.3s ease;
+            color: var(--pure-white);
+            opacity: 1;
         }
 
-            .nav-item.active {
-                color: var(--accent-green);
-            }
-
+            .nav-item.active,
             .nav-item:hover {
                 color: var(--accent-green);
                 transform: translateY(-2px);
@@ -186,37 +185,35 @@
     <!-- Bottom Navigation -->
     <nav class="nav-bottom fixed bottom-0 left-0 right-0 z-30">
         <div class="flex items-center justify-around py-3">
-            <a href="index.html" class="nav-item flex-1 flex flex-col items-center justify-center gap-1 min-h-[56px] select-none ">
+            <a href="index.html" class="nav-item flex-1 flex flex-col items-center justify-center gap-1 min-h-[56px] select-none">
                 <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
                     <path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z" />
                 </svg>
                 <span class="text-xs">Home</span>
             </a>
-            <a href="events.html" class="nav-item flex-1 flex flex-col items-center justify-center gap-1 min-h-[56px] select-none ">
+            <a href="events.html" class="nav-item flex-1 flex flex-col items-center justify-center gap-1 min-h-[56px] select-none">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
                 </svg>
                 <span class="text-xs">Eventi</span>
             </a>
-            <a href="deals.html" class="nav-item flex-1 flex flex-col items-center justify-center gap-1 min-h-[56px] select-none ">
+            <a href="deals.html" class="nav-item flex-1 flex flex-col items-center justify-center gap-1 min-h-[56px] select-none">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 7h.01M7 3h5c.512 0 1.024.195 1.414.586l7 7a2 2 0 010 2.828l-7 7a2 2 0 01-2.828 0l-7-7A1.994 1.994 0 013 12V7a4 4 0 014-4z"></path>
                 </svg>
                 <span class="text-xs">Sconti</span>
             </a>
-            <a href="shop.html" class="nav-item flex-1 flex flex-col items-center justify-center gap-1 min-h-[56px] select-none ">
+            <a href="shop.html" class="nav-item flex-1 flex flex-col items-center justify-center gap-1 min-h-[56px] select-none">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z" />
                 </svg>
                 <span class="text-xs">Shop</span>
             </a>
-            <a href="social.html" class="nav-item flex-1 flex flex-col items-center justify-center gap-1 min-h-[56px] select-none ">
+            <a href="social.html" class="nav-item flex-1 flex flex-col items-center justify-center gap-1 min-h-[56px] select-none">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8h2a2 2 0 012 2v6a2 2 0 01-2 2h-2v4l-4-4H9a1.994 1.994 0 01-1.414-.586m0 0L11 14h4a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2v4l.586-.586z"></path>
                 </svg>
-                <span class="text-xs">
-                    Social
-                </span>
+                <span class="text-xs">Social</span>
             </a>
             <a href="minecraft.html" class="nav-item flex-1 flex flex-col items-center justify-center gap-1 min-h-[56px] select-none text-green-600">
                 <svg class="w-6 h-6 block" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 2l7 4v8l-7 4-7-4V6l7-4zm0 0v8m0 0l7-4m-7 4l-7-4" /></svg>
@@ -225,7 +222,7 @@
         </div>
     </nav>
     <script>
-        // Keep content clear of the bottom nav and set active link without changing layout size
+        // Keep content clear of the bottom nav
         (function () {
             function applyNavLayout() {
                 var nav = document.querySelector('nav.nav-bottom');
@@ -233,18 +230,7 @@
                 var h = nav.offsetHeight || 56;
                 document.body.style.paddingBottom = h + 'px';
             }
-            function setActive() {
-                var here = (location.pathname.split('/').pop() || 'index.html').toLowerCase();
-                document.querySelectorAll('nav.nav-bottom a.nav-item').forEach(function (a) {
-                    var isActive = a.getAttribute('href').toLowerCase() === here;
-                    a.classList.toggle('opacity-100', isActive);
-                    a.classList.toggle('opacity-60', !isActive);
-                });
-            }
-            window.addEventListener('DOMContentLoaded', function () {
-                applyNavLayout();
-                setActive();
-            });
+            window.addEventListener('DOMContentLoaded', applyNavLayout);
             window.addEventListener('resize', applyNavLayout);
         })();
     </script>
@@ -425,14 +411,14 @@
                     const card = document.createElement('article');
                     card.className = 'rounded-xl overflow-hidden border border-white/10 bg-black/30';
                     card.innerHTML = `
-                <div class="aspect-video bg-black/30 overflow-hidden">
-                  ${m.image ? `<img src="${m.image}" alt="" class="w-full h-full object-cover">` : ''}
-                </div>
-                <div class="p-3">
-                  <h3 class="font-semibold">${m.title || 'Mod'}</h3>
-                  <p class="text-sm text-white/80 mt-1">${m.description || ''}</p>
-                  ${m.link ? `<a class="inline-block mt-2 text-xs px-2 py-1 rounded bg-white/10 hover:bg-white/20" href="${m.link}" target="_blank" rel="noopener">Dettagli</a>` : ''}
-                </div>`;
+                    <div class="aspect-video bg-black/30 overflow-hidden">
+                      ${m.image ? `<img src="${m.image}" alt="" class="w-full h-full object-cover">` : ''}
+                    </div>
+                    <div class="p-3">
+                      <h3 class="font-semibold">${m.title || 'Mod'}</h3>
+                      <p class="text-sm text-white/80 mt-1">${m.description || ''}</p>
+                      ${m.link ? `<a class="inline-block mt-2 text-xs px-2 py-1 rounded bg-white/10 hover:bg-white/20" href="${m.link}" target="_blank" rel="noopener">Dettagli</a>` : ''}
+                    </div>`;
                     grid.appendChild(card);
                 });
             } catch { }
