--- a/deals.html
+++ b/deals.html
@@ -58,14 +58,21 @@
         /* Stile link recensioni */
         .btn-review {
             color: #aaa;
-            font-size: 0.7rem;
+            font-size: 0.75rem;
             text-decoration: none;
             display: flex;
             align-items: center;
             gap: 4px;
             transition: color 0.2s;
+            border: 1px solid rgba(255,255,255,0.2);
+            padding: 4px 8px;
+            border-radius: 6px;
         }
-        .btn-review:hover { color: #fff; text-decoration: underline; }
+        .btn-review:hover { 
+            color: #fff; 
+            border-color: #fff;
+            background: rgba(255,255,255,0.1);
+        }
 
         .deal-card {
             transition: all 0.3s ease;
@@ -88,6 +95,7 @@
             justify-content: center;
             height: 100px;
             width: 100px;
+            flex-shrink: 0;
         }
         .product-image {
             mix-blend-mode: multiply;
@@ -118,7 +126,7 @@
             <img src="icons/icon-192.png" alt="Logo" class="w-10 h-10 rounded-full border-2 border-green-500">
             <div>
                 <h1 class="text-xl font-bold orbitron">Sconti VR</h1>
-                <p class="text-[10px] text-gray-300 leading-tight">Supporta la Community</p>
+                <p class="text-[10px] text-gray-300 leading-tight">Selezione Ufficiale Italia</p>
             </div>
         </div>
     </header>
@@ -136,10 +144,13 @@
 
     <section class="px-4 mb-6">
         <a href="https://www.amazon.it/?tag=Oculanida-21" target="_blank" rel="noopener noreferrer" 
-           class="block w-full bg-gray-800 border border-gray-600 rounded-xl p-3 text-center hover:border-yellow-500 transition-all group">
-            <div class="flex items-center justify-center space-x-2">
-                <svg class="w-5 h-5 text-yellow-500 group-hover:scale-110 transition-transform" fill="currentColor" viewBox="0 0 24 24"><path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/></svg>
-                <span class="text-sm font-bold text-gray-200 group-hover:text-white">Cerca qualsiasi altra cosa su Amazon</span>
+           class="block w-full bg-gray-800 border border-gray-600 rounded-xl p-4 text-center hover:border-yellow-500 transition-all group shadow-lg">
+            <div class="flex flex-col items-center justify-center">
+                <div class="flex items-center gap-2 mb-1">
+                    <svg class="w-6 h-6 text-yellow-500 group-hover:scale-110 transition-transform" fill="currentColor" viewBox="0 0 24 24"><path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/></svg>
+                    <span class="text-lg font-bold text-white orbitron">CERCHI ALTRO?</span>
+                </div>
+                <span class="text-sm text-gray-300 group-hover:text-white">Clicca qui per cercare su Amazon Italia supportandoci</span>
             </div>
         </a>
     </section>
@@ -151,7 +162,7 @@
         <h2 class="text-lg font-bold orbitron mb-3 pl-1 border-l-4 border-blue-500">Accessori BoboVR</h2>
         <div id="bobo-container" class="space-y-3 mb-6"></div>
 
-        <h2 class="text-lg font-bold orbitron mb-3 pl-1 border-l-4 border-purple-500">Altri Accessori Top</h2>
+        <h2 class="text-lg font-bold orbitron mb-3 pl-1 border-l-4 border-purple-500">Accessori Kiwi & Altro</h2>
         <div id="accessori-container" class="space-y-3 mb-20"></div>
     </section>
 
@@ -187,23 +198,26 @@
     <script>
         const TAG = "Oculanida-21";
 
-        /* LISTA PRODOTTI */
+        /* LISTA PRODOTTI - CODICI ASIN AGGIORNATI PER AMAZON ITALIA
+           Nota: Se un'immagine non appare o il link non va, verifica l'ASIN su Amazon.it 
+           copiandolo dall'URL del prodotto (es. amazon.it/dp/B0C7W12RN2 -> ASIN è B0C7W12RN2)
+        */
         const products = [
             // --- VISORI ---
-            { asin: "B0D9WSF91Y", title: "Meta Quest 3S (128GB)", section: "visori", desc: "Il nuovo standard VR. Include Batman Arkham Shadow." },
-            { asin: "B0D9WRT367", title: "Meta Quest 3S (256GB)", section: "visori", desc: "Doppio spazio per più giochi e app." },
-            { asin: "B0C7W12RN2", title: "Meta Quest 3 (512GB)", section: "visori", desc: "Il re della Mixed Reality. Lenti Pancake." },
-            { asin: "B0BSVPSJ3X", title: "PlayStation VR2", section: "visori", desc: "Per PS5. Eye tracking e HDR OLED." },
+            { asin: "B0C7W12RN2", title: "Meta Quest 3 (512GB)", section: "visori", desc: "Il re della Mixed Reality. Lenti Pancake e prestazioni top." },
+            { asin: "B0D9WSF91Y", title: "Meta Quest 3S (128GB)", section: "visori", desc: "Nuovo modello entry-level. Potente ed economico." },
+            { asin: "B0D9WRT367", title: "Meta Quest 3S (256GB)", section: "visori", desc: "Versione con più memoria per i tuoi giochi." },
+            { asin: "B0BSVPSJ3X", title: "PlayStation VR2", section: "visori", desc: "Visore Next-Gen per PS5 con Eye Tracking." },
 
             // --- BOBOVR ---
             { asin: "B0CS3PMW3X", title: "BoboVR S3 Pro (Super Strap)", section: "bobo", desc: "Il TOP per Quest 3/3S. Ventola testa + Batteria 10.000mAh." },
             { asin: "B0CJLG9SBR", title: "BoboVR M3 Pro (Battery Strap)", section: "bobo", desc: "Comfort Halo classico con batteria magnetica." },
             { asin: "B09F5W5G19", title: "BoboVR B2 Battery Pack", section: "bobo", desc: "Batteria di riserva magnetica hot-swap (5200mAh)." },
-            { asin: "B099DLH34P", title: "BoboVR Dock Ricarica Doppia", section: "bobo", desc: "Carica due batterie B2 contemporaneamente." },
-            { asin: "B0D3V3J3J5", title: "BoboVR D3 Dock (per S3/B100)", section: "bobo", desc: "Stazione di ricarica per le nuove batterie B100." },
+            { asin: "B099DLH34P", title: "BoboVR Dock Ricarica Doppia", section: "bobo", desc: "Stazione per caricare 2 batterie B2 contemporaneamente." },
+            { asin: "B0D3V3J3J5", title: "BoboVR D3 Dock (per S3/B100)", section: "bobo", desc: "Nuova dock station per le batterie B100." },
 
             // --- ALTRI ACCESSORI ---
-            { asin: "B0CLGLQHMV", title: "Kiwi Design Battery Strap (SPC)", section: "accessori", desc: "Cinturino Elite di alta qualità con batteria integrata." },
+            { asin: "B0CLGLQHMV", title: "Kiwi Design Battery Strap (SPC)", section: "accessori", desc: "Cinturino Elite bilanciato con batteria integrata." },
             { asin: "B0CMW46W65", title: "Kiwi Design Comfort Strap", section: "accessori", desc: "Versione leggera e super comoda senza batteria." },
             { asin: "B0CLGSGYQ7", title: "AMVR Controller Grips", section: "accessori", desc: "Grip in silicone antiscivolo con laccetto nocche." },
             { asin: "B098399X91", title: "Syntech Cavo Link 5m", section: "accessori", desc: "Indispensabile per PCVR stabile e nitido." }
@@ -211,7 +225,10 @@
 
         function render() {
             // Pulisci contenitori
-            ['visori', 'bobo', 'accessori'].forEach(id => document.getElementById(id + '-container').innerHTML = '');
+            ['visori', 'bobo', 'accessori'].forEach(id => {
+                const el = document.getElementById(id + '-container');
+                if(el) el.innerHTML = '';
+            });
 
             products.forEach((p, i) => {
                 const container = document.getElementById(p.section + '-container');
@@ -224,7 +241,7 @@
                 const el = document.createElement('div');
                 el.className = 'deal-card card-glass rounded-xl p-3 flex gap-4 items-center opacity-0';
                 el.innerHTML = `
-                    <div class="product-image-container flex-shrink-0">
+                    <div class="product-image-container">
                         <img src="${imgUrl}" alt="${p.title}" class="product-image" onerror="this.src='icons/icon-192.png'">
                     </div>
                     
@@ -235,11 +252,10 @@
                         </div>
                         
                         <div class="flex items-end justify-between gap-2 mt-auto">
-                            <a href="${link}#customerReviews" target="_blank" class="btn-review group">
-                                <span class="text-yellow-400 group-hover:text-yellow-300">⭐⭐⭐⭐</span> 
-                                <span class="hidden sm:inline">Vedi recensioni</span>
+                            <a href="${link}#customerReviews" target="_blank" class="btn-review">
+                                ⭐ Vedi recensioni
                             </a>
-                            <a href="${link}" target="_blank" class="btn-amazon px-3 py-2 rounded text-xs flex items-center gap-1 shadow-md">
+                            <a href="${link}" target="_blank" class="btn-amazon px-4 py-2 rounded-lg text-xs flex items-center gap-1 shadow-md">
                                 Acquista
                                 <svg class="w-3 h-3" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3"/></svg>
                             </a>
