--- a/index.html
+++ b/index.html
@@ -79,98 +79,71 @@
             </div>
         </header>
 
-        <!-- Banner -->
-        <div class="hero-banner rounded-2xl p-6 flex flex-col justify-center items-center text-center min-h-[200px] relative overflow-hidden">
-            <div class="absolute inset-0 bg-gradient-to-t from-black/80 via-black/40 to-transparent"></div>
-            <div class="relative z-10">
-                <h2 class="orbitron text-3xl md:text-4xl font-bold mb-3">
-                    Community Italiana <span class="text-green-400">VR</span>
-                </h2>
-                <p class="text-gray-200 mb-4 max-w-md mx-auto">
-                    Entra nel futuro del gaming e socializza in realtà virtuale
-                </p>
-                <!-- Pulsante 100 % -->
-                <a href="deals" class="btn-primary px-8 py-3 rounded-xl font-semibold inline-block hover:scale-105 transition-transform">
-                    Esplora le Offerte VR
-                </a>
+        <div>
+            <!-- Banner -->
+            <div class="hero-banner rounded-3xl h-64 mb-4 relative overflow-hidden">
+                <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
+                <div class="absolute bottom-4 left-4 right-4">
+                    <h2 class="text-3xl font-bold orbitron mb-2">Benvenuti nella Realtà Virtuale</h2>
+                    <p class="text-lg text-gray-200">La community italiana dedicata a Meta Quest, PSVR2 e PC VR</p>
+                </div>
             </div>
+
+            <!-- Pulsante 100 % -->
+            <a href="https://t.me/oculandiavr" class="btn-primary w-full py-3 px-6 rounded-xl font-semibold text-center block">Esplora la Community</a>
         </div>
     </section>
 
     <!-- WIDGET NEWS -->
-    <section class="px-4 pb-4">
-        <div class="bg-black/30 backdrop-blur-sm rounded-2xl p-4">
-            <h3 class="orbitron text-lg font-bold mb-3 text-center">📰 Ultime Novità</h3>
-            <div id="news-widget" class="text-sm text-gray-300 space-y-2">
-                <div class="flex items-center gap-2">
-                    <span class="text-green-400">•</span>
-                    <span>Nuovi sconti VR disponibili!</span>
-                </div>
-                <div class="flex items-center gap-2">
-                    <span class="text-blue-400">•</span>
-                    <span>Evento community questo weekend</span>
-                </div>
-                <div class="flex items-center gap-2">
-                    <span class="text-purple-400">•</span>
-                    <span>Meta Quest 3S in arrivo</span>
-                </div>
-            </div>
-        </div>
+    <section class="px-4 pb-20">
+        <div class="elfsight-app-2dc51398-f327-45fa-9831-d3966ae1ad7d" data-elfsight-app-lazy></div>
+        <script src="https://elfsightcdn.com/platform.js" async></script>
     </section>
-
     <!-- Bottom Navigation -->
     <nav class="nav-bottom fixed bottom-0 left-0 right-0 z-30">
         <div class="flex items-center justify-around py-3">
-            <a href="/" class="nav-item flex-1 flex flex-col items-center justify-center gap-1 min-h-[56px] select-none text-green-600">
+            <a href="index.html" class="nav-item flex-1 flex flex-col items-center justify-center gap-1 min-h-[56px] select-none text-green-600">
                 <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
                     <path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z" />
                 </svg>
                 <span class="text-xs">Home</span>
             </a>
-            <a href="events" class="nav-item flex-1 flex flex-col items-center justify-center gap-1 min-h-[56px] select-none">
+            <a href="events.html" class="nav-item flex-1 flex flex-col items-center justify-center gap-1 min-h-[56px] select-none ">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
                 </svg>
                 <span class="text-xs">Eventi</span>
             </a>
-            <a href="deals" class="nav-item flex-1 flex flex-col items-center justify-center gap-1 min-h-[56px] select-none">
+            <a href="deals.html" class="nav-item flex-1 flex flex-col items-center justify-center gap-1 min-h-[56px] select-none ">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 7h.01M7 3h5c.512 0 1.024.195 1.414.586l7 7a2 2 0 010 2.828l-7 7a2 2 0 01-2.828 0l-7-7A1.994 1.994 0 013 12V7a4 4 0 014-4z" />
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 7h.01M7 3h5c.512 0 1.024.195 1.414.586l7 7a2 2 0 010 2.828l-7 7a2 2 0 01-2.828 0l-7-7A1.994 1.994 0 013 12V7a4 4 0 014-4z"></path>
                 </svg>
                 <span class="text-xs">Sconti</span>
             </a>
-            <a href="shop" class="nav-item flex-1 flex flex-col items-center justify-center gap-1 min-h-[56px] select-none">
+            <a href="shop.html" class="nav-item flex-1 flex flex-col items-center justify-center gap-1 min-h-[56px] select-none ">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z" />
                 </svg>
                 <span class="text-xs">Shop</span>
             </a>
-            <a href="social" class="nav-item flex-1 flex flex-col items-center justify-center gap-1 min-h-[56px] select-none">
+            <a href="social.html" class="nav-item flex-1 flex flex-col items-center justify-center gap-1 min-h-[56px] select-none ">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8h2a2 2 0 012 2v6a2 2 0 01-2 2h-2v4l-4-4H9a1.994 1.994 0 01-1.414-.586m0 0L11 14h4a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2v4l.586-.586z" />
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8h2a2 2 0 012 2v6a2 2 0 01-2 2h-2v4l-4-4H9a1.994 1.994 0 01-1.414-.586m0 0L11 14h4a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2v4l.586-.586z"></path>
                 </svg>
-                <span class="text-xs">Social</span>
+                <span class="text-xs">
+                    Social
+                </span>
             </a>
+            <a href="minecraft.html" class="nav-item flex-1 flex flex-col items-center justify-center gap-1 min-h-[56px] select-none ">
+      <svg class="w-6 h-6 block" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 2l7 4v8l-7 4-7-4V6l7-4zm0 0v8m0 0l7-4m-7 4l-7-4"/></svg>
+      <span class="text-[11px] leading-none whitespace-nowrap">Minecraft</span>
+    </a>
         </div>
     </nav>
 
-    <script>
-        // Debug info
-        console.log("Oculandia VR - Home page loaded");
-        
-        // Basic performance check
-        window.addEventListener('load', () => {
-            const perfData = performance.timing;
-            const loadTime = perfData.loadEventEnd - perfData.navigationStart;
-            console.log(`Home page loaded in ${loadTime}ms`);
-        });
-    </script>
-<script>
-    document.addEventListener('keydown', e => {
-        if (e.key === 'ArrowLeft' || e.key === 'ArrowRight') {
-            e.preventDefault();
-        }
-    });
-</script>
+    <!-- AI Chatbot – fixed bottom-right -->
+    <div class="chatbot-container">
+        <div class="elfsight-app-e005b101-5ae0-477f-94fa-f18e3e6d138d" data-elfsight-app-lazy></div>
+    </div>
 </body>
 </html>
